--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "random-mac-address-generator",
+  "name": "rmag",
   "version": "1.0.0",
-  "description": "source of IEEE mac address   * [http://standards.ieee.org/develop/regauth/oui/oui.txt](http://standards.ieee.org/develop/regauth/oui/oui.txt)",
+  "description": "another random mac address generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
